fix: userdata as map
